--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Takuya Matsuyama",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
     "@chakra-ui/icons": "^2.0.8",
     "@chakra-ui/react": "^2.2.8",
+    "@chakra-ui/system": "^2.3.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "framer-motion": "^7.2.0",
@@ -22,7 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "three": "^0.143.0"
+    "three": "^0.143.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
